--- a/src/components/LoaderSpinner/LoaderSpinner.module.scss
+++ b/src/components/LoaderSpinner/LoaderSpinner.module.scss
@@ -1,6 +1,6 @@
 .container {
-  display: flex;
-  margin-top: 20px;
-  align-items: center;
-  justify-content: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50px);
 }
