--- a/src/pages/BoardPage/BoardPage.module.scss
+++ b/src/pages/BoardPage/BoardPage.module.scss
@@ -58,6 +58,7 @@
   }
 
   .btnCreateList {
+    text-align: left;
     color: #98d8fc;
 
     &:active,
@@ -68,6 +69,8 @@
   }
 
   .listItem.addNewList {
+    padding: 0;
+    // min-height: 31px;
     background-color: $primary;
   }
 
